make-snake (3.14.0-0) unstable; urgency=low

  * Applied changes from v3.9.2 es_AR backports to latest
  * Added Loading animation splash window

 -- Team Kano <dev@kano.me>  Wed, 15 Nov 2017 15:51:00 +0100

make-snake (3.12.1-0) unstable; urgency=low

  * Replaced Dashboard position of Youtube with Make Snake

 -- Team Kano <dev@kano.me>  Mon, 25 Sep 2017 15:29:00 +0000

make-snake (3.9.2-0) unstable; urgency=low

  * Fixed launching app with localisation from kdesktop (backport)

 -- Team Kano <dev@kano.me>  Fri, 6 Oct 2017 11:52:00 +0000

make-snake (3.0.0-1) unstable; urgency=low

  * Added game launcher for Kano Overworld

 -- Team Kano <dev@kano.me>  Thu, 8 Apr 2016 15:29:00 +0000

make-snake (2.3.0-1) unstable; urgency=low

  * Integrate with latest kano-profile

 -- Team Kano <dev@kano.me>  Thu, 2 Oct 2014 21:19:06 +0000

make-snake (1.3-1) unstable; urgency=low

  * Added Share functionality

 -- Team Kano <dev@kano.me>  Thu, 2 Oct 2014 21:19:06 +0000

make-snake (1.2-1) unstable; urgency=low

  * Added Reset option

 -- Team Kano <dev@kano.me>  Thu, 27 Feb 2014 17:19:06 +0000

make-snake (1.1-1) unstable; urgency=low

  * Reviewing for release

 -- Team Kano <dev@kano.me>  Thu, 27 Feb 2014 17:19:06 +0000

make-snake (1.0-54) unstable; urgency=low

  * Package rebuilt, updated to revision 6b4b8d26.

 -- Team Kano <dev@kano.me>  Thu, 27 Feb 2014 17:19:06 +0000

make-snake (1.0-53) unstable; urgency=low

  * Package rebuilt, updated to revision 1671cd1c.

 -- Team Kano <dev@kano.me>  Wed, 26 Feb 2014 21:02:37 +0000

make-snake (1.0-52) unstable; urgency=low

  * Package rebuilt, updated to revision 0d18c311.

 -- Team Kano <dev@kano.me>  Tue, 25 Feb 2014 15:47:45 +0000

make-snake (1.0-51) unstable; urgency=low

  * Package rebuilt, updated to revision a2206acf.

 -- Team Kano <dev@kano.me>  Mon, 24 Feb 2014 21:03:26 +0000

make-snake (1.0-50) unstable; urgency=low

  * Package rebuilt, updated to revision 00264517.
