@@ -2,8 +2,9 @@ make-snake (3.14.0-0) unstable; urgency=low
 
   * Applied changes from v3.9.2 es_AR backports to latest
   * Added Loading animation splash window
+  * Removed deprecated game launcher from Overworld
 
- -- Team Kano <dev@kano.me>  Wed, 15 Nov 2017 15:51:00 +0100
+ -- Team Kano <dev@kano.me>  Mon, 4 Dec 2017 18:59:00 +0100
 
 make-snake (3.12.1-0) unstable; urgency=low
 
